--- a/src/components/Card/styles.module.css
+++ b/src/components/Card/styles.module.css
@@ -1,10 +1,10 @@
-/* .cardContainer {
+.cardContainer {
   border: 1px solid #2c2c2c;
   border-radius: 10px;
-  padding: 2em;
+  padding: 2rem;
   display: flex;
   flex-direction: column;
-  gap: 2em;
+  gap: 2rem;
 }
 
 .cardImage {
@@ -15,14 +15,14 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 1em;
+  gap: 1rem;
 }
 
 .tag {
   color: #fff;
   border-radius: 100px;
   border: 1px solid #fff;
-  padding: 0.5em 1.2em;
+  padding: 0.5rem 1.2rem;
   width: fit-content;
   margin: 0;
 }
@@ -31,19 +31,18 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 2em;
+  gap: 2rem;
 }
 
 .cardHeading {
   color: #fff;
-  font-size: 1.5em;
-  margin: 0 0 1em 0;
+  font-size: 1.5rem;
+  margin: 0 0 1rem 0;
 }
 
 .cardParagraph {
   color: #b3b3b3;
   margin: 0;
-  font-size: 16px;
 }
 
 @media screen and (max-width: 420px) {
@@ -66,6 +65,6 @@
   }
 
   .cardParagraph {
-    font-size: 16px;
+    font-size: 4vw;
   }
-} */
+}
